# machine-learning

./: .dvcignore  .gitignore  README.md  README_ML_PLAYGROUND.md  dvc.yaml  pyproject.toml
.dvc/: config
.github/workflows/: cml.yaml  promote-models.yaml
src/ca_house_prediction/: __init__.py  dvc.yaml  evaluate_model.py  get_data.py  prepare_data.py  train_model.py
src/f1/: __init__.py  dvc.yaml  evaluate_model.py  feature_engineering.py  get_data.py  prepare_data.py  train_model.py
src/ml_project/: __init__.py  evaluate.py  prepare_data.py  train.py
