[tool.poetry]
name = "playground"
version = "0.1.0"
description = "ML playground with Poetry, DVC and CML"
authors = ["Emil57 trejocovantesde@gmail.com"]
packages = [ { include = "ml_project", from = "src" } ]

[tool.poetry.dependencies]
python = "^3.9"
scikit-learn = "^1.2"
pandas = "^2.0"
joblib = "^1.2"
dvc = "3.64.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
